--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <!-- Шапка сайта -->
+    <header>
+      <nav>
+        <a lang="en" href="/">WebStudio</a>
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+        
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main>
+      <!-- Герой -->
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <a href="">Замовити послугу</a>
+      </section>
+
+      <!-- Переваги -->
+      <section>
+        <h2>Особливості</h2>
+
+        <ul>
+          <li>
+            <h3>Увага до деталейs</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальність</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
+          </li>
+          <li>
+            <h3>Планування</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>Сучасні технології</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Приклади робіт -->
+      <section>
+        <h2>Чим ми займаємося</h2>
+
+        <ul>
+          <li>
+            <img src="./images/box1.jpg" alt="Створення сайтів" width="370">
+          </li>
+          <li>
+            <img src="./images/box2.jpg" alt="Розробка мобільних додатків" width="370">
+          </li>
+          <li>
+            <img src="./images/box3.jpg" alt="Розробка дизайну сайтів" width="370">
+          </li>
+        </ul>
+      </section>
+
+      <!-- Команда розробників -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/img.jpg" alt="Фото Ігора Дем'яненко" width="270">
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img2.jpg" alt="Фото Ольги Рєпіної" width="270">
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/img3.jpg" alt="Фото Миколи Тарасова" width="270">
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img4.jpg" alt="Фото Михайла Єрмакова" width="270">
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>          
+        </ul>
+      </section>
+    </main>
+
+    <!-- Футер -->
+    <footer>
+       <a lang="en" href="/">WebStudio</a>
+       <address>
+        м. Київ, пр-т Лесі Українки, 26<br>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+       </address>
+    </footer>
+</body>
+</html>
