--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
-        
+      </nav>  
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </nav>
+        </ul>      
     </header>
 
     <main>
@@ -69,13 +68,13 @@
 
         <ul>
           <li>
-            <img src="./images/box1.jpg" alt="Створення сайтів" width="370">
+            <img src="./img/box1.jpg" alt="Створення сайтів" width="370">
           </li>
           <li>
-            <img src="./images/box2.jpg" alt="Розробка мобільних додатків" width="370">
+            <img src="./img/box2.jpg" alt="Розробка мобільних додатків" width="370">
           </li>
           <li>
-            <img src="./images/box3.jpg" alt="Розробка дизайну сайтів" width="370">
+            <img src="./img/box3.jpg" alt="Розробка дизайну сайтів" width="370">
           </li>
         </ul>
       </section>
@@ -85,22 +84,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img.jpg" alt="Фото Ігора Дем'яненко" width="270">
+            <img src="./img/img.jpg" alt="Фото Ігора Дем'яненко" width="270">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="Фото Ольги Рєпіної" width="270">
+            <img src="./img/img2.jpg" alt="Фото Ольги Рєпіної" width="270">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Фото Миколи Тарасова" width="270">
+            <img src="./img/img3.jpg" alt="Фото Миколи Тарасова" width="270">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img4.jpg" alt="Фото Михайла Єрмакова" width="270">
+            <img src="./img/img4.jpg" alt="Фото Михайла Єрмакова" width="270">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>          
@@ -112,9 +111,11 @@
     <footer>
        <a lang="en" href="/">WebStudio</a>
        <address>
-        м. Київ, пр-т Лесі Українки, 26<br>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+        <li>м. Київ, пр-т Лесі Українки, 26</li> 
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
        </address>
     </footer>
 </body>
